# habit-dashboard

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/habit_timer/: __main__.py  main.py
src/habit_timer.dist-info/: METADATA  top_level.txt
src/habit_timer/domain/: models.py
src/habit_timer/repository/: config_repository.py  database.py  habit_repository.py  pomodoro_repository.py  record_repository.py
src/habit_timer/service/: backup_service.py  habit_service.py  pomodoro_service.py  record_service.py  settings_service.py
src/habit_timer/ui/: calendar_view.py  pomodoro_view.py  settings_view.py  stats_view.py  today_view.py
src/habit_timer/utils/: dates.py  i18n.py
